# UAV-Indoor-Exploration

./: .gitignore  .gitmodules  ANALYSIS_REPORT.md  CLAUDE.md  COSTMAP_QOS_FIX.md  SYSTEM_GUIDE.md  check_costmap_status.sh  debug_costmap.sh  exploration_gui.py  frames_2025-12-05_16.29.15.gv  frames_2025-12-05_16.34.46.gv  octa_maze.sdf  octa_maze_boxes.sdf  test_costmap_output.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/uav_navigation/share/uav_navigation/: package.sh  package.xml  package.zsh
install/uav_navigation/share/uav_navigation/cmake/: uav_navigationConfig.cmake
install/uav_navigation/share/uav_navigation/config/: nav2_drone.rviz  nav2_params.yaml
install/uav_navigation/share/uav_navigation/launch/: navigation.launch.py
log/: latest_build
metric_logs/: exploration_metrics.csv
metric_logs/complex_office/: 2026-01-24_20-52-08.csv  2026-01-24_23-58-37.csv  2026-01-25_00-00-19.csv  2026-01-25_18-57-39.csv  2026-01-25_19-48-43.csv  2026-01-26_03-36-10.csv  2026-01-26_04-00-37.csv  2026-01-26_04-01-25.csv  2026-01-26_23-11-01.csv  2026-01-26_23-12-16.csv  2026-01-26_23-12-53.csv  2026-01-26_23-16-37.csv  2026-01-26_23-18-07.csv  2026-01-26_23-20-48.csv  2026-01-26_23-22-50.csv  2026-01-26_23-30-29.csv  2026-01-26_23-36-05.csv  2026-01-26_23-39-54.csv  2026-01-26_23-40-33.csv  2026-01-26_23-43-51.csv  2026-01-26_23-51-58.csv  2026-01-26_23-53-22.csv  2026-01-26_23-54-07.csv  2026-01-27_00-08-36.csv  2026-01-27_00-08-38.csv  2026-01-27_00-14-26.csv  2026-01-27_00-20-08.csv  2026-01-27_12-03-41.csv  2026-01-27_12-04-55.csv  2026-01-27_12-12-56.csv  2026-01-27_12-14-31.csv  2026-01-27_17-21-04.csv  2026-01-28_21-30-09.csv  2026-01-28_21-30-35.csv  2026-01-28_21-33-58.csv  2026-01-28_21-40-16.csv  (+5 more)
src/cmd_vel_to_px4/: CMakeLists.txt  package.xml
src/cmd_vel_to_px4/launch/: px4_bridge.launch.py
src/cmd_vel_to_px4/src/: cmd_vel_px4_bridge.cpp  gz_depth_bridge.cpp  odom_converter.py  teleop_node.py
src/exploration_metrics/: .gitignore  CMakeLists.txt  package.xml
src/exploration_metrics/config/: params.yaml
src/exploration_metrics/ground_truth/complex_office/: complex_office.yaml  ground_truth_20260124_204657.bt  ground_truth_20260124_204657.pgm  ground_truth_20260125_193135.bt  ground_truth_20260125_193135.pgm
src/exploration_metrics/ground_truth/darpa/: darpa.yaml  ground_truth_20260126_023551.bt  ground_truth_20260126_023551.pgm
src/exploration_metrics/ground_truth/octomaze/: ground_truth_20260125_233720.bt  ground_truth_20260125_233720.pgm  octomaze.yaml
src/exploration_metrics/launch/: exploration_metrics.launch.py
src/exploration_metrics/msg/: ExplorationMetrics.msg
src/exploration_metrics/scripts/: plot_metrics.py
src/exploration_metrics/src/: exploration_metrics_node.cpp  map_saver_node.cpp
src/exploration_planner/: CMakeLists.txt  VIEWPOINT_INTEGRATION.md  package.xml
src/exploration_planner/config/: exploration.rviz  nav2_params.yaml  params.yaml
src/exploration_planner/launch/: exploration_planner.launch.py  rviz.launch.py
src/exploration_planner/msg/: ExplorationStatus.msg  TelemetryStatus.msg
src/exploration_planner/src/: costmap_generator_node.cpp  exploration_visualizer_node.cpp  global_tour_planner_node.cpp  nav2_path_planner_node.cpp  path_planner_node.cpp  path_yaw_injector_node.cpp  telemetry_node.cpp  trajectory_follower_node.cpp  trajectory_generator_node.cpp
src/exploration_planner_tsp/: CMakeLists.txt  package.xml
src/exploration_planner_tsp/config/: exploration.rviz  params.yaml
src/exploration_planner_tsp/launch/: exploration_planner.launch.py
src/exploration_planner_tsp/src/: exploration_visualizer_node.cpp  global_tour_planner_node.cpp  local_refiner_node.cpp  trajectory_follower_node.cpp  trajectory_generator_node.cpp
src/exploration_planner_with_local/: CMakeLists.txt  package.xml
src/exploration_planner_with_local/config/: exploration.rviz  params.yaml
src/exploration_planner_with_local/include/exploration_planner/: common.hpp
src/exploration_planner_with_local/launch/: exploration_planner.launch.py
src/exploration_planner_with_local/msg/: Trajectory.msg
src/exploration_planner_with_local/src/: exploration_visualizer_node.cpp  global_tour_planner_node.cpp  local_path_adjuster_node.cpp  trajectory_generator_node.cpp
src/frontier_detection/: CMakeLists.txt  package.xml
src/frontier_detection/config/: frontier_detection.rviz  frontier_params.yaml
src/frontier_detection/include/frontier_detection/: frontier_detector.hpp
src/frontier_detection/launch/: frontier_detection.launch.py  rviz.launch.py
src/frontier_detection/src/: frontier_detector.cpp  frontier_detector_node.cpp
src/frontier_exploration/: CMakeLists.txt  DETAILED_CHANGES.md  EXECUTION_SUMMARY.md  MIGRATION_SUMMARY.md  QUICK_REFERENCE.md  README_UPDATE.md  REFACTORING_REPORT.md  SIDE_BY_SIDE_COMPARISON.md  UPGRADE_SUMMARY.md  VIEWPOINT_GENERATOR_EXPLANATION.md  package.xml
src/frontier_exploration/config/: exploration.rviz  exploration_params.yaml  frontier_exploration.rviz  params.yaml
src/frontier_exploration/include/frontier_exploration/: common.hpp
src/frontier_exploration/launch/: exploration.launch.py  exploration_remapped.launch.py  frontier_exploration.launch.py  rviz.launch.py
src/frontier_exploration/msg/: ClusterConnection.msg  FrontierArray.msg  FrontierCluster.msg  Viewpoint.msg
src/frontier_exploration/src/: cost_computer_node.cpp  cost_evaluator_node.cpp  exploration_visualizer_node.cpp  frontier_clusterer_node.cpp  frontier_detector_node.cpp  frontier_visualizer_node.cpp  global_planner_node.cpp  goal_selector_node.cpp  local_planner_node.cpp  path_follower_node.cpp  viewpoint_generator_node.cpp
src/frontier_interfaces/: CMakeLists.txt  package.xml
src/frontier_interfaces/msg/: ExplorationState.msg  FrontierCluster.msg  FrontierPoint.msg  FrontierTable.msg
src/sim_topic_bridge/: CMakeLists.txt
src/sim_topic_bridge/launch/: gz_bridge_launch.launch.py
src/sim_topic_bridge/src/: px4_to_ros_bridge.cpp
src/sim_topic_bridge/src/include/: px4_to_ros_bridge.hpp
(+142 files in other folders)
