<?xml version="1.0"?>
<package format="3">
  <name>cmd_vel_to_px4</name>
  <version>1.0.0</version>
  <description>cmd_vel to PX4 bridge</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>gz-transport13</build_depend>
  <build_depend>gz-msgs10</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>