<?xml version="1.0"?>
<package format="3">
  <name>frontier_exploration</name>
  <version>1.0.0</version>
  <description>Modular 3D frontier exploration for UAVs</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>frontier_interfaces</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
